<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detail_kost_fragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_kost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_kost"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ic_launcher_background"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/detail_name" />

        <TextView
            android:id="@+id/detail_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            android:text="@string/detail_gender" />

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            android:text="@string/detail_location" />

        <TextView
            android:id="@+id/detail_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            android:text="@string/detail_price" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            android:text="@string/detail_description" />

        <Button
            android:id="@+id/button_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/check"/>

    </LinearLayout>

</ScrollView>