<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/booking_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/booking_move"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/booking_move_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/pindahan"/>

        <TextView
            android:id="@+id/move_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/move_name" />

        <EditText
            android:id="@+id/input_move_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:hint="@string/hint_move_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/move_location_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/move_location_now" />

        <EditText
            android:id="@+id/input_move_location_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:hint="@string/input_move_location_now"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/move_location_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/move_location_destination" />

        <EditText
            android:id="@+id/input_move_location_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:hint="@string/input_move_location_destination"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/move_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/move_date" />

        <EditText
            android:id="@+id/input_move_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:hint="@string/input_move_date"
            android:inputType="date"
            android:focusable="false"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/move_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/booking_number" />

        <EditText
            android:id="@+id/input_move_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:hint="@string/input_booking_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/move_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/booking_move"/>

    </LinearLayout>

</ScrollView>