<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/booking_kost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/booking_kost"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/booking_kost_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ic_launcher_background"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/detail_name" />

        <EditText
            android:id="@+id/disable_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/detail_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/detail_location" />

        <EditText
            android:id="@+id/disable_detail_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/detail_location"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/booking_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/booking_name" />

        <EditText
            android:id="@+id/input_booking_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:hint="@string/input_booking_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/booking_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/booking_date" />

        <EditText
            android:id="@+id/input_booking_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:focusable="false"
            android:hint="@string/input_booking_date"
            android:inputType="datetime"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/booking_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/booking_number" />

        <EditText
            android:id="@+id/input_booking_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:hint="@string/input_booking_number"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/check"/>

    </LinearLayout>

</ScrollView>