<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.move.MoveFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="?attr/actionBarSize">

                <TextView
                    android:id="@+id/move_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/move_service"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/move_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/image_description"
                    android:scaleType="centerCrop"
                    android:layout_margin="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/move_service"
                    app:srcCompat="@drawable/pindahan" />

                <TextView
                    android:id="@+id/move_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/move_detail"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/move_image" />

                <Button
                    android:id="@+id/button_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/move"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/move_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>